--- a/idris.cabal
+++ b/idris.cabal
@@ -876,13 +876,13 @@ Library
                 , ansi-wl-pprint < 0.7
                 , base64-bytestring < 1.1
                 , binary >= 0.7 && < 0.8
-                , blaze-html >= 0.6.1.3 && < 0.8
-                , blaze-markup >= 0.5.2.1 && < 0.6.3.0
+                , blaze-html >= 0.6.1.3
+                , blaze-markup >= 0.5.2.1
                 , bytestring < 0.11
                 , cheapskate < 0.2
                 , containers >= 0.5 && < 0.6
                 , deepseq < 1.5
-                , directory >= 1.2.2.0 && < 1.3
+                , directory >= 1.2.1 && < 1.3
                 , filepath < 1.5
                 , fingertree >= 0.1 && < 0.2
                 , haskeline >= 0.7 && < 0.8
@@ -894,14 +894,14 @@ Library
                 , pretty < 1.2
                 , process < 1.3
                 , split < 0.3
-                , text >=1.2.1.0 && < 1.3
+                , text >=1.2.0 && < 1.3
                 , time >= 1.4 && < 1.6
                 , transformers < 0.5
                 , transformers-compat >= 0.3
                 , trifecta >= 1.1 && < 1.6
                 , uniplate >=1.6 && < 1.7
                 , unordered-containers < 0.3
-                , utf8-string < 0.4
+                , utf8-string
                 , vector < 0.11
                 , vector-binary-instances < 0.3
                 , xml < 1.4
